Added more options

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -10,6 +10,14 @@
     "editor.fontFamily": "Fira Code",
     "editor.fontLigatures": true,
     "workbench.colorTheme": "Bimbo Theme",
+    "editor.cursorBlinking": "smooth",
+    "editor.dragAndDrop": true,
+    "explorer.openEditors.visible": 0,
+    "extensions.autoUpdate": true,
+    "vsicons.dontShowNewVersionMessage": true,
+    "vsicons.projectDetection.autoReload": true,
+    "extensions.ignoreRecommendations": false,
+    "workbench.iconTheme": "vscode-icons",
     "gitlens.advanced.messages": {
       "suppressCommitHasNoPreviousCommitWarning": false,
       "suppressCommitNotFoundWarning": false,
